--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ title: "Hi there!"
 
 #main info
 #owner
-owner: "I am Alee Tsai"
+owner: "I am Hsueh-Ya (Alee), Tsai"
 email: aleetsaiya@gmail.com
-info: "A Computer Science student who wants to be a Front-End engineer from Taiwan 👨‍💻"
+info: "A Computer Science student who wants to be a Front-End engineer from Taiwan.👨‍💻"
 #description
 desc: "This is my coding blog. I will share my learning experience about coding on this site, hope you enjoy! 😁"
 
