--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ owner: "I am Hsueh-Ya (Alee), Tsai"
 email: aleetsaiya@gmail.com
 info: "A Computer Science student who wants to be a Front-End engineer from Taiwan.👨‍💻"
 #description
-desc: "This is my coding blog. I will share my learning experience about coding on this site, hope you enjoy! 😁"
+desc: "This is my coding blog. I will share my learning experience about coding on this site. You can visit About page if you want to know more about me, hope you enjoy! 😁"
 
 #menu
 menu:
