use search feature after installing plugin

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ placename: Taiwan
 placelink: https://en.wikipedia.org/wiki/Taiwan
 github: https://github.com/aleetsaiya
 linkedin: https://www.linkedin.com/in/alee-tsai/
-instagram: https://www.instagram.com/alee_ba_ba/
+twitter: https://twitter.com/Alee_ba_ba
 
 # Misc
 nanobar: /js/nanobar.min.js
