add Default theme feature

--- a/_config.yml
+++ b/_config.yml
@@ -53,3 +53,6 @@ article:
 # DISQUS comments (sign up to Disqus to get disqus_shortname)
 disqus_enabled: false
 disqus_shortname: https-aleetsaiya-github-io
+
+# defaut theme (dark / light)
+default_theme: 'dark'
