--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: Coding Blog
 subtitle: ''
 description: 'Record my coding learning experience'
-keywords:
+keywords: Alee
 author: Alee Tsai
 language: en
 timezone: 'Asia/Taipei'
